--- a/static/scss/includes/_header.scss
+++ b/static/scss/includes/_header.scss
@@ -6,8 +6,18 @@
     text-shadow: 2px 4px 6px rgba(0, 0, 0, 0.3); /* Soft shadow for depth */
     h2{
       font-weight: 700; /* Bold font weight for emphasis */
-      font-size: 4em; /* Large size for visibility */
+      font-size: 2em; /* Large size for visibility */
 
+    }
+
+}
+
+@media screen and (min-width: 769px) {
+    .page-header {
+        h2{
+          font-weight: 700; /* Bold font weight for emphasis */
+          font-size: 4em; /* Large size for visibility */
+        }
     }
 
 }
