--- a/static/scss/includes/_song_layout.scss
+++ b/static/scss/includes/_song_layout.scss
@@ -2,6 +2,9 @@ $color_1: #333;
 $font-family_1: Arial, sans-serif;
 $background-color_1: #faf6f6;
 
+.song-list{
+  padding-left: 0;
+}
 .song-section {
     display: flex;
     flex-direction: column;
